[gd_scene load_steps=9 format=3 uid="uid://didapnfrc0db5"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_t0vxw"]
[ext_resource type="Texture2D" uid="uid://c2omuuv3uvqj0" path="res://images/Buttoning/upgrade base_pressed.png" id="2_aob4v"]
[ext_resource type="Texture2D" uid="uid://dkt83jm8fu65" path="res://images/Buttoning/upgrade base_hover.png" id="3_6yamt"]
[ext_resource type="Texture2D" uid="uid://c5fo8sb7555qv" path="res://images/Buttoning/upgrade base_disabled.png" id="4_jmlfn"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/sacredartifact_up.gd" id="5_175it"]
[ext_resource type="PackedScene" uid="uid://bky71iebkkng5" path="res://Scenes/upgrades/purchased/sacredartifact_upp.tscn" id="6_u1l0m"]
[ext_resource type="Texture2D" uid="uid://dlab7q01eyfmn" path="res://images/UpgradeIcon/upgrades/sacred.png" id="7_lshas"]

[sub_resource type="Theme" id="Theme_tesf0"]
default_font_size = 16

[node name="sacredartifact_up" type="TextureButton" groups=["Persist"]]
visible = false
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
theme = SubResource("Theme_tesf0")
texture_normal = ExtResource("1_t0vxw")
texture_pressed = ExtResource("2_aob4v")
texture_hover = ExtResource("3_6yamt")
texture_disabled = ExtResource("4_jmlfn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_175it")
title = "Sacred Artifacts"
description = "With these your hoard might even invite in..."
cost = 100000000
tier = 2
build_req = 25
target_node = ExtResource("6_u1l0m")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_lshas")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
